<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="id.ac.ub.ptiik.labmobile.bab3.MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/screen_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewScreen1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:textColor="@color/screen_text2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewScreen2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|fill_vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="6dp"
            android:paddingRight="20dp"
            android:paddingTop="6dp"
            android:textColor="@color/screen_text1"
            android:textSize="38sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/keyboard_bg"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonC"
            style="@style/button_3"
            android:layout_gravity="center"
            android:text="@string/buttonC" />

        <Button
            android:id="@+id/buttonPersen"
            style="@style/button_3"
            android:layout_gravity="center"
            android:text="@string/buttonMod" />

        <Button
            android:id="@+id/buttonDel"
            style="@style/button_3"
            android:layout_gravity="center"
            android:text="@string/buttonDel" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/keyboard_bg"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button7"
                style="@style/button_1"
                android:text="@string/button7"
                android:textSize="25sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button8"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button8" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button9"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button9" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonBagi"
                style="@style/button_2"
                android:layout_gravity="center"
                android:text="@string/buttonDivide" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/keyboard_bg"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button4"
                style="@style/button_1"
                android:text="@string/button4"
                android:textSize="25sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button5"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button5" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button6"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button6" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonKali"
                style="@style/button_2"
                android:layout_gravity="center"
                android:text="@string/buttonMultiply" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/keyboard_bg"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button1"
                style="@style/button_1"
                android:text="@string/button1"
                android:textSize="25sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button2"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button2" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button3"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/button3" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonKurang"
                style="@style/button_2"
                android:layout_gravity="center"
                android:text="@string/buttonMinus" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/keyboard_bg"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/button0"
                style="@style/button_1"
                android:text="@string/button0"
                android:textSize="25sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonKoma"
                style="@style/button_1"
                android:layout_gravity="center"
                android:text="@string/buttonComma" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonSamaDengan"
                style="@style/button_4"
                android:layout_gravity="center"
                android:text="@string/buttonEqual" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/buttonTambah"
                style="@style/button_2"
                android:layout_gravity="center"
                android:text="@string/buttonAdd" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>

